--- a/assets/style.css
+++ b/assets/style.css
@@ -38,3 +38,7 @@ table.tablesorter thead tr .headerSortDown {
 table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
 background-color: #8dbdd8;
 }
+
+.quicksearch_frame input[type=submit] {
+    background-image: url("../assets/images/icons/grey/search.svg"); 
+}
