--- a/assets/style.css
+++ b/assets/style.css
@@ -21,3 +21,7 @@ table.tablesorter thead tr .headerSortDown {
 form.default input[type="date"]{
     max-width: 10em !important;
 }
+
+tr.needs_fill {
+    background-color: red;
+}
